fix invisible font to improve performance

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -37,6 +37,7 @@
 *::after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  font-display: swap;
 }
 
 html {
